Add additional configurations methods (CMD line and JVM args) and add unit tests for the config